Fix copyright wrapping

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -426,4 +426,8 @@ $tile-size: 100px;
   width: 100px;
   color: #e9cbff;
   font-size: 0.8rem;
+
+  &__inseparable {
+    white-space: nowrap;
+  }
 }
